# mariner

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  mdl.rb  mkdocs.yml  pylintrc  pyproject.toml  pytest.ini  setup.py  snapcraft.yaml  tox.ini
.gitlab/issue_templates/: Bug.md  Feature request.md
.gitlab/merge_request_templates/: Default.md
docker/: Dockerfile
docs/: config.md  use.md
src/mariner/: __version__.py  cache.py  commands.py  config.py  downloader.py  exceptions.py  interactive.py  main.py  mixins.py  proxyplugin.py  searchengine.py  torrent.py  trackerplugin.py  utils.py
src/mariner/commands/: config.py  details.py  download.py  magnet.py  open.py  search.py
src/mariner/config/: config.yaml
src/mariner/plugins/: distrowatch.py  kickasstorrents.py  limetorrents.py  linuxtracker.py  nyaa.py  piratebay.py  tokyotosho.py
src/mariner/proxies/: kickasstorrents.py  limetorrents.py  piratebay.py
src/mariner/trackers/: anidex.py  anirena.py  archive.py  btkitty.py  distrowatch.py  etree.py  kickasstorrents.disabled  kickasstorrents.py  limetorrents.py  linuxtracker.py  nyaa.py  nyaapantsu.py  piratebay.disabled  piratebay.py  tokyotosho.py  torrentkitty.disabled
src/mariner/utils/: color.py  parse.py  path.py
tests/: context.py  test_config.py  test_distrowatch.py  test_downloader.py  test_exceptions.py  test_kickasstorrents.py  test_limetorrents.py  test_linuxtracker.py  test_mixins.py  test_nyaa.py  test_piratebay.py  test_searchengine.py  test_tokyotosho.py  test_torrent.py  test_utils.py
tests/api/: conftest.py  test_config.py  test_downloader.py  test_exceptions.py  test_mixins.py  test_searchengine.py  test_torrent.py  test_utils.py
tests/api/cassettes/: TestSearchEngine.test_search[10].yaml  TestSearchEngine.test_search[15].yaml  TestSearchEngine.test_search[5].yaml  TestSearchEngine.test_search_newest.yaml  TestSearchEngine.test_search_no_result.yaml  test_searchengine.yaml
tests/api/data/mariner/: config.yaml
tests/api/proxies/: test_limetorrents.py  test_piratebayproxy.py
tests/api/proxies/cassettes/: TestLimeTorrentsProxy.test_result.yaml  TestPirateBayProxy.test_result.yaml
tests/api/trackers/: test_anidex.py  test_anirena.py  test_archive.py  test_btkitty.py  test_distrowatch.py  test_etree.py  test_kickasstorrents.py  test_limetorrents.py  test_linuxtracker.py  test_nyaa.py  test_nyaapantsu.py  test_piratebay.py  test_tokyotosho.py
tests/api/trackers/cassettes/: TestAnidex.test_no_results.yaml  TestAnidex.test_results.yaml  TestAnirena.test_no_results.yaml  TestAnirena.test_results.yaml  TestArchive.test_no_results.yaml  TestArchive.test_results.yaml  TestBTKitty.test_no_results.yaml  TestBTKitty.test_results.yaml  TestDistrowatch.test_no_results.yaml  TestDistrowatch.test_results.yaml  TestEtree.test_no_results.yaml  TestEtree.test_results.yaml  TestKickAssTorrents.test_no_results.yaml  TestKickAssTorrents.test_results.yaml  TestLimeTorrents.test_no_results.yaml  TestLimeTorrents.test_results.yaml  TestLinuxTracker.test_no_results.yaml  TestLinuxTracker.test_results.yaml  TestNyaa.test_no_results.yaml  TestNyaa.test_results.yaml  TestNyaaPantsu.test_no_results.yaml  TestNyaaPantsu.test_results.yaml  TestPirateBay.test_no_results.yaml  TestPirateBay.test_results.yaml  TestTokyoTosho.test_no_results.yaml  TestTokyoTosho.test_results.yaml  test_archive.yaml  test_distrowatch.yaml  test_etree.yaml  test_limetorrents.yaml  test_linuxtracker.yaml  test_nyaa.yaml  test_piratebay.yaml  test_tokyotosho.yaml
tests/api/utils/: test_color.py  test_parse.py  test_path.py
tests/cli/: conftest.py  test_config.py  test_details.py  test_downloads.py  test_search.py
tests/data/: config.yaml
tests/proxies/: test_kickasstorrents.py  test_limetorrents.py
tests/trackers/: test_archive.py  test_distrowatch.py  test_etree.py  test_kickasstorrents.py  test_limetorrents.py  test_linuxtracker.py  test_nyaa.py  test_piratebay.py  test_tokyotosho.py
